# text-to-handwriting

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  handwriting.py  supabase.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: schema.sql  supabase.py
backend/app/db/migrations/: add_profile_insert_policy.sql
backend/app/models/: user.py
backend/app/routes/: supabase.py
backend/app/schemas/: user.py
backend/app/services/: supabase.py
backend/app/utils/: supabase.py  supabase_queries.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  handwriting.ts
frontend/src/components/: HandwritingCanvas.tsx  Navigation.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/pages/: Home.tsx  TextInputPage.tsx
frontend/src/store/: auth.ts  handwritingStore.ts
ml/: .dockerignore  Dockerfile  pyproject.toml
ml/models/: handwriting_model.py
ml/training/: train.py
