[tool.poetry]
name = "handwriteai-ml"
version = "0.1.0"
description = "Machine learning models for handwriting synthesis"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
torchvision = "^0.16.0"
numpy = "^1.24.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
pillow = "^10.0.0"
tqdm = "^4.66.1"
wandb = "^0.15.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 